[tool.poetry]
name = "tech-analysis-api-handler"
version = "0.1.0"
description = ""
authors = ["fighterming <62058849+fighterming@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
